tab implementado en layout pendiente

--- a/src/app/pokemon/layout/layout.component.html
+++ b/src/app/pokemon/layout/layout.component.html
@@ -1,2 +1,15 @@
 <h1>Pokémons</h1>
 <hr>
+
+<ul class="nav nav-tabs">
+    <li class="nav-item" (click)="currentTab = 'tab-pokemons'">
+        <a class="nav-link" [ngClass]="{'active': this.currentTab === 'tab-pokemons'}" href="#">
+            Pokémons
+        </a>
+    </li>
+    <li class="nav-item" (click)="currentTab = 'tab-favorites'">
+        <a class="nav-link" [ngClass]="{'active': this.currentTab === 'tab-favorites'}" href="#">
+            Favoritos
+        </a>
+    </li>
+</ul>
