--- a/src/app/pokemon/layout/layout.component.html
+++ b/src/app/pokemon/layout/layout.component.html
@@ -1,6 +1,6 @@
 <h1>Pokémons</h1>
 <hr>
-
+<app-tabs></app-tabs>
 <ul class="nav nav-tabs">
     <li class="nav-item" (click)="currentTab = 'tab-pokemons'">
         <a class="nav-link" [ngClass]="{'active': this.currentTab === 'tab-pokemons'}" href="#">
