--- a/src/app/pokemon/components/tabs/tabs.component.html
+++ b/src/app/pokemon/components/tabs/tabs.component.html
@@ -1,1 +1,12 @@
-<p>tabs works!</p>
+<ul class="nav nav-tabs">
+    <li class="nav-item" (click)="currentTab = 'tab-pokemons'">
+        <a class="nav-link" [ngClass]="{'active': this.currentTab === 'tab-pokemons'}" href="#">
+            Pokémons
+        </a>
+    </li>
+    <li class="nav-item" (click)="currentTab = 'tab-favorites'">
+        <a class="nav-link" [ngClass]="{'active': this.currentTab === 'tab-favorites'}" href="#">
+            Favoritos
+        </a>
+    </li>
+</ul>
